# primus-project

./: .gitattributes  .gitignore  Cargo.toml  INSTRUCTION  NETWORK.md  README.md  SPECIFICATION.md
primus-cli/: Cargo.toml  README.md  SPECIFICATION.md
primus-cli/src/: admin.rs  config.rs  main.rs  utils.rs
primus-cli/src/commands/: mod.rs  tx.rs  wallet.rs
primus-client/: Cargo.toml
primus-client/src/: main.rs  rpc.rs
primus-core/: Cargo.toml  README.md  SPECIFICATION.md  genesis.toml
primus-core/src/: atom.rs  chamber.rs  crypto.rs  crypto_shim.rs  crystal.rs  engine.rs  framing.rs  galactic_sync.rs  gravity.rs  ipc.rs  kinetic.rs  main.rs  physics_shim.rs  processor.rs  pvm.rs  setup.rs  state.rs  storage.rs
primus-net-opt/: Cargo.toml  QUALIFIED.md  README.md  SPECIFICATION.md
primus-net-opt/benches/: BENCHMARKS.md  discovery_beacon.rs  gossip_dedup.rs  gravity_shield.rs  xor_routing.rs
primus-net-opt/fuzz/: Cargo.toml
primus-net-opt/fuzz/fuzz_targets/: fuzz_gravity_shield.rs  fuzz_primus_message.rs  fuzz_xor_distance.rs
primus-net-opt/src/: dht.rs  discovery.rs  gossip.rs  gravity_net.rs  gravity_shield.rs  lib.rs  nat.rs  network.rs  noise.rs  server.rs  transport.rs
primus-net-opt/tests/: integration.rs  property.rs
primus-net-opt/tests/integration/: dht_find_node_empty.rs  dht_lifecycle.rs  discovery_self_filter.rs  frame_limit.rs  gossip_dedup.rs  gravity_shield_layers.rs
primus-net-opt/tests/property/: dht_props.proptest-regressions  dht_props.rs  gravity_net_props.rs  gravity_shield_props.rs
primus-sdk/: Cargo.toml  README.md  SPECIFICATION.md
primus-sdk/examples/: keygen.rs  keygen2.rs
primus-sdk/src/: error.rs  lib.rs  proof.rs  proof_util.rs
primus-sdk/src/crypto/: mod.rs
primus-sdk/src/transaction/: mod.rs
primus-sdk/src/wallet/: mod.rs
primus-sdk/tests/: serialization.rs
primus-storage/: BENCHMARK.md  Cargo.toml  QUALIFIED.md  README.md  SPECIFICATION.md
primus-storage/benches/: storage_benches.rs
primus-storage/src/: changeset.rs  lib.rs  mempool_v2.rs  mpt.rs  mpt_store.rs  proof_builder.rs  storage.rs  types.rs
primus-storage/tests/: fuzz_tests.rs  qualified_audit.proptest-regressions  qualified_audit.rs
primus-types/: Cargo.toml  QUALIFIED.md  README.md  SPECIFICATION.md
primus-types/src/: atom.rs  constants.rs  crystal.rs  error.rs  galactic_sync.rs  ipc.rs  lib.rs  payload.rs  peer.rs  physics.rs  proof.rs  reaction.rs
primus-types/tests/: qualified_audit.rs
primus-vm/: Cargo.toml  README.md  SPECIFICATION.md  benchmark.md  qualified.md
primus-vm/benches/: crypto_bench.rs  gas_bench.rs  physics_bench.rs  pvm_bench.rs  pvm_realistic_bench.rs
primus-vm/fuzz/: Cargo.toml
primus-vm/fuzz/fuzz_targets/: pvm_harness.rs
primus-vm/scratch/: test_ml_dsa.rs  test_ml_dsa_2.rs
primus-vm/src/: context.rs  dispatch.rs  error.rs  lib.rs  physics.rs  pvm.rs
primus-vm/src/wasm/: gas.rs  host.rs  limits.rs  mod.rs  wasmtime_backend.rs
primus-vm/tests/: property_tests.proptest-regressions  property_tests.rs  pvm_harness.rs  pvm_integration.rs  wasm_integration.rs
primus-vm/tests/common/: mod.rs
