[package]
name = "primus-client"
version = "0.1.0"
edition = "2024"
authors = ["Architect"]
description = "TUI Wallet and RPC Client for Primus-Project Layer-1"

[dependencies]
# --- Internal Core Components ---
primus-sdk = { path = "../primus-sdk" }
primus-types = { path = "../primus-types" }

# --- Terminal User Interface ---
ratatui = "0.26"
crossterm = "0.27"

# --- Async & Network ---
tokio = { version = "1.0", features = ["full"] }

# --- Serialization & Data ---
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
hex = "0.4"

# --- Cryptography & Security ---
snow = "0.9"
rand = "0.8"

# --- Utilities ---
anyhow = "1.0"
