[package]
name = "primus-net-opt"
version = "0.1.0"
edition = "2024"

[dependencies]
primus-types = { path = "../primus-types", features = ["verify", "std"] }
quinn = "0.11"
tokio = { version = "1", features = ["full"] }
sha3 = "0.10"
rkyv = { version = "0.7", features = ["alloc", "validation", "bytecheck", "size_32"] }
bytes = "1.9"
serde = { version = "1.0", features = ["derive"] }
dashmap = "6.1"
anyhow = "1.0"
futures = "0.3"
rand = "0.8"
snow = "0.9"
ml-dsa = { version = "0.0.4", default-features = false }
wtransport = "0.1"
bincode = "1.3.3"
log = "0.4.29"
rustls = "0.23.39"
rcgen = "0.13.2"
async-trait = "0.1.89"
local-ip-address = "0.6.12"
igd-next = { version = "0.17.0", features = ["aio_tokio"] }
socket2 = "0.6.3"
tokio-util = { version = "0.7", features = ["codec"] }
blake3 = "1"

[dev-dependencies]
proptest          = "1.4"
tokio-test        = "0.4"
criterion         = { version = "0.5", features = ["html_reports"] }
mockall           = "0.12"
tempfile          = "3"
async-trait       = "0.1"

[[bench]]
name    = "xor_routing"
harness = false

[[bench]]
name    = "gravity_shield"
harness = false

[[bench]]
name    = "gossip_dedup"
harness = false

[[bench]]
name    = "discovery_beacon"
harness = false