[package]
name = "primus-sdk"
version = "0.1.0"
edition = "2021"
description = "Primus Blockchain SDK — Wallet Management & Transaction Signing for Mobile and Desktop"
license = "MIT"

[lib]
name = "primus_sdk"
crate-type = ["cdylib", "rlib"]

[dependencies]
# ── Serialization ─────────────────────────────────────────────────────────────
serde   = { version = "1", features = ["derive"] }
bincode = "1"                    # Retained for WalletFile on-disk format (wallet/mod.rs)
# RDIV-001: rkyv version MUST match primus-types/Cargo.toml exactly (0.7).
# Different rkyv minor versions produce incompatible binary layouts.
# primus-types features: alloc, validation, bytecheck, size_32.
rkyv    = { version = "0.7", default-features = false, features = ["alloc", "validation", "bytecheck", "size_32"] }
blake3  = "1"
primus-types = { path = "../primus-types" }

# ── Encoding ──────────────────────────────────────────────────────────────────
hex = "0.4"

# ── Error handling ────────────────────────────────────────────────────────────
anyhow = "1"

# ── Mnemonic / BIP-39 ─────────────────────────────────────────────────────────
bip39 = "2.2.2"

# ── Entropy (CSPRNG) ──────────────────────────────────────────────────────────
rand      = "0.8"
rand_core = { version = "0.6", features = ["getrandom"] }

# ── Post-Quantum Cryptography ─────────────────────────────────────────────────
ml-dsa = "0.0.4"
zeroize = { version = "1.7", features = ["derive"] }

# ── Hashing ───────────────────────────────────────────────────────────────────
sha3 = "0.10.9"
tempfile = "3.27.0"                    # Must match ml-dsa's transitive dep version

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }

[features]
default = []
uniffi  = ["dep:uniffi"]
wasm    = ["dep:wasm-bindgen", "dep:js-sys"]

[dependencies.uniffi]
version  = "0.27"
optional = true

[dependencies.wasm-bindgen]
version  = "0.2"
optional = true

[dependencies.js-sys]
version  = "0.3"
optional = true

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1