[package]
name    = "primus-storage"
version = "0.2.0"
edition = "2024"

[dependencies]
primus-types = { path = "../primus-types" }
sled         = "0.34"
bincode      = "1"
serde        = { version = "1", features = ["derive"] }
anyhow       = "1"
blake3       = "1"
sha3         = { version = "0.10", default-features = false }
hex          = "0.4"
log          = "0.4"
rkyv         = { version = "0.7", default-features = false, features = ["alloc", "validation", "bytecheck", "size_32"] }
thiserror    = "1"
zeroize      = { version = "1", features = ["derive"] }




[dev-dependencies]
tempfile    = "3"
proptest    = "1"
criterion   = { version = "0.5", features = ["html_reports"] }
