[package]
name    = "primus-vm"
version = "0.1.0"
edition = "2024"

[features]
default          = ["wasmtime-backend"]
wasmtime-backend = ["dep:wasmtime"]
wasmer-backend   = ["dep:wasmer"]

[dependencies]
primus-types   = { path = "../primus-types" }
primus-storage = { path = "../primus-storage" }
anyhow         = "1"
thiserror      = "1"
hex            = "0.4"
sha3           = { version = "0.10", default-features = false }
bincode        = "1"
serde          = { version = "1", features = ["derive"] }
lru            = "0.12"
parking_lot    = "0.12"
wasmtime       = { version = "25", optional = true, features = ["cranelift"] }
wasmer         = { version = "4", optional = true }

[dev-dependencies]
tempfile = "3"
wat      = "1"
proptest = "1.5"
criterion = { version = "0.5", features = ["html_reports"] }
ed25519-dalek = "2"
rand = "0.8"






[[bench]]
name = "physics_bench"
harness = false

[[bench]]
name = "gas_bench"
harness = false

[[bench]]
name = "pvm_bench"
harness = false

[[bench]]
name = "crypto_bench"
harness = false

[[bench]]
name = "pvm_realistic_bench"
harness = false

