[package]
name = "primus-vm-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
primus-vm = { path = ".." }
primus-types = { path = "../../primus-types" }
primus-storage = {path = "../../primus-storage"}
serde = { version = "1", features = ["derive"] }
arbitrary = { version = "1.3", features = ["derive"] }

[[bin]]
name = "pvm_harness"
path = "fuzz_targets/pvm_harness.rs"
test = false
doc = false
